example-site.css
.pwe-info__ul {
    list-style: inside;
    text-align: left;
    padding-left: 2%;
}
.pwe-content {
    max-width: 800px;
    height: 25%;
    min-height: 101px;
    margin: 0 auto;
    font-family: sans-serif;
    font-size: 12px;
    line-height: 12px;
    letter-spacing: 1.5px;
    margin-top: 10px;
    text-align: center;
}
.pwe-no-midi-warning {
    background-color: #b33a3a;
    padding: 20px 0px;
    margin: 10px 0px;
    border-radius: 10px;
    display: none;
}

.pwe-no-midi-warning--show {
    display: inherit;
}

.pwe-sequencer__row {
    padding: 10px 0;
}
.pwe-info {
    margin: 20px 0;
    padding: 10px 0;
}
.pwe-sequencer {
    background-color: #6f6f6f;
    border-radius: 10px;
    margin: 10px 0 0 0;
}
.pwe-metronome {
    position: relative;
    margin: 10px 10px;
    display: inline-block;
    width: 96%;
    background-color: #c7ccce;
    border-radius: 10px;
    padding: 0 0 10px 0;
}

.pwe-metronome__buttons {
    padding: 10px 0 0 0;
}

.pwe-metronome__slider {
    margin: 15px 0 15px 0;
    width: 30%;
}

.pwe-metronome__slider-label {
    vertical-align: super;
}

.text--bold {
    font-weight: 600;
}

.pwe-button {
    display: inline-block;
    height: 64px;
    line-height: 64px;
    margin: 0px 1%;
    background-color: #c7ccce;
    border-radius: 10px;
    opacity: 1;
    cursor: pointer;
    border: 2px solid #333333;
    transition: all 0.2s;
}

.pwe-button--narrow {
    width: 8%;
}

.pwe-button--wide {
    width: 28%;
}

.pwe-button--short {
    height: 34px;
    line-height: 34px;
}

.pwe-button--selected {
    background-color: #ff9933;
}
.pwe-button--has-sequence {
    background-color: #ffff4d;
}
.pwe-button--playing {
    background-color: #33cc33;
}
.pwe-button--recording {
    background-color: #e60000;
}
.pwe-button--active {
    opacity: 0.9;
    box-shadow: inset 0px 0px 30px blue;
    border: 2px solid rgba(100, 100, 100, 0.3);
}

@media only screen and (max-width: 768px) {
    /* For mobile phones: */
    [class*="pwe-metronome"] {
        width: 94%;
    }

    [class*="pwe-button"] {
        margin-bottom: 15px;
    }

    [class*="pwe-button--narrow"] {
        width: 20%;
    }

    [class*="pwe-metronome__slider"] {
        width: 90%;
    }
}

@keyframes shake {
    0% {
        transform: translateX(0);
        transform: translateY(0);
        transform: scale(1, 1);
    }
    40% {
        transform: translateX(10px);
        transform: translateY(0px);
        transform: scale(1.2, 1.2);
    }
    100% {
        transform: translateX(0);
        transform: translateY(0);
    }
}

